docs(api): enhance JDBC, logging, XML/JSON, and exceptions documentation
- Enhanced JDBC documentation with JDBC 4.3 features, ConnectionBuilder, ShardingKey, connection pools (HikariCP, DBCP, Druid)
- Enhanced logging documentation with JUL, System.Logger (JDK 9), SLF4J, Logback, and logging bridges
- Enhanced XML/JSON documentation with DOM, SAX, StAX, JAXB, JSON-P, JSON.B (JEP 471)
- Enhanced exceptions documentation with Throwable hierarchy, try-with-resources, multi-catch, exception chaining, StackWalker (JEP 259)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>