@@ -1,6 +1,6 @@
 # 异常处理
 
-> Throwable、Exception、Error、异常链演进历程
+> Throwable、Exception、Error、异常链、try-with-resources 演进历程
 
 [← 返回 API 框架](../)
 
@@ -9,22 +9,616 @@
 ## 快速概览
 
 ```
-JDK 1.0 ── JDK 1.4 ── JDK 7 ── JDK 9 ── JDK 21
-   │         │        │        │        │
-异常    异常链   try-with   StackWalker  异常层次
-体系    getCause   resources  (JEP 259)   优化
+JDK 1.0 ── JDK 1.4 ── JDK 7 ── JDK 9 ── JDK 20 ── JDK 21
+   │         │        │        │        │        │
+异常体系   异常链   try-with  StackWalker  异常模式   精简异常
+Throwable  getCause  resources  (JEP 259)  匹配     层次
+          异常包装  多捕获
 ```
 
 ### 核心演进
 
-| 版本 | 特性 | 说明 |
-|------|------|------|
-| **JDK 1.0** | Throwable/Error/Exception | 异常体系 |
-| **JDK 1.4** | 异常链 | getCause() |
-| **JDK 7** | try-with-resources | 自动资源管理 |
-| **JDK 7** | multi-catch | 多异常捕获 |
-| **JDK 9** | StackWalker | 栈遍历 API |
-| **JDK 21** | 异常优化 | 性能改进 |
+| 版本 | 特性 | JEP | 说明 |
+|------|------|-----|------|
+| **JDK 1.0** | Throwable/Error/Exception | - | 异常体系基础 |
+| **JDK 1.4** | 异常链 | - | getCause(), initCause() |
+| **JDK 7** | try-with-resources | - | 自动资源管理 |
+| **JDK 7** | multi-catch | - | catch (A \| B e) |
+| **JDK 7** | 精确异常重抛 | - | final 重抛 |
+| **JDK 9** | StackWalker | JEP 259 | 栈遍历 API |
+| **JDK 20** | 模式匹配异常 | - | instanceof 模式 (预览) |
+| **JDK 21** | 模式匹配异常 | - | when 守卫 (预览) |
+
+---
+
+## 目录
+
+- [异常体系](#异常体系)
+- [异常处理](#异常处理)
+- [try-with-resources](#try-with-resources)
+- [异常链](#异常链)
+- [StackWalker](#stackwalker)
+- [最佳实践](#最佳实践)
+- [核心贡献者](#核心贡献者)
+- [相关链接](#相关链接)
+
+---
+
+## 异常体系
+
+### Throwable 层次
+
+```
+                    ┌─────────────────┐
+                    │   Throwable     │
+                    ├─────────────────┤
+                    │ - message       │
+                    │ - cause         │
+                    │ - stackTrace    │
+                    └────────┬────────┘
+                             │
+              ┌──────────────┴──────────────┐
+              │                             │
+     ┌────────▼────────┐          ┌────────▼────────┐
+     │     Error       │          │    Exception    │
+     ├─────────────────┤          ├─────────────────┤
+     │ 系统级错误      │          │ 可恢复异常      │
+     │ 不应捕获        │          │ 应该处理        │
+     └────────┬────────┘          └────────┬────────┘
+              │                             │
+    ┌─────────┼─────────┐        ┌─────────┼─────────┐
+    │         │         │        │         │         │
+    │         │         │        │         │         │
+┌───▼───┐ ┌───▼───┐ ┌───▼───┐  ┌──▼──┐ ┌──▼──┐ ┌───▼──┐
+│OutOfM │ │Stack │ │VM    │  │IO   │ │Runtime││SQLException│
+│emory  │ │Overflow│ │Error │  │Exc  │ │Exception││etc...    │
+│Error  │ │Error │ │      │  │     │ │     │ │       │
+└───────┘ └───────┘ └──────┘  └─────┘ └─────┘ └───────┘
+```
+
+### 基础异常
+
+```java
+// Error - 系统级错误，不应捕获
+// - OutOfMemoryError: 内存溢出
+// - StackOverflowError: 栈溢出
+// - VirtualMachineError: 虚拟机错误
+
+// Exception - 可恢复异常
+// - IOException: I/O 错误
+// - SQLException: 数据库错误
+// - RuntimeException: 运行时异常
+
+// RuntimeException - 运行时异常 (unchecked)
+// - NullPointerException: 空指针
+// - IllegalArgumentException: 非法参数
+// - IndexOutOfBoundsException: 索引越界
+// - ArithmeticException: 算术错误
+```
+
+---
+
+## 异常处理
+
+### 基础语法
+
+```java
+// try-catch-finally
+try {
+    // 可能抛出异常的代码
+    FileReader file = new FileReader("input.txt");
+    // ...
+} catch (FileNotFoundException e) {
+    // 处理文件不存在
+    System.err.println("文件不存在: " + e.getMessage());
+} catch (IOException e) {
+    // 处理其他 IO 错误
+    System.err.println("IO 错误: " + e.getMessage());
+} finally {
+    // 总是执行的代码
+    System.out.println("清理资源");
+}
+
+// try-finally (无 catch)
+try {
+    // 代码
+} finally {
+    // 总是执行
+}
+
+// try-catch (无 finally)
+try {
+    // 代码
+} catch (Exception e) {
+    // 处理
+}
+```
+
+### 抛出异常
+
+```java
+// throw - 抛出异常
+throw new IllegalArgumentException("参数不能为空");
+
+// throws - 声明异常
+public void readFile(String path) throws IOException {
+    FileReader file = new FileReader(path);
+    // ...
+}
+
+// 自定义异常
+public class BusinessException extends RuntimeException {
+    private int code;
+
+    public BusinessException(int code, String message) {
+        super(message);
+        this.code = code;
+    }
+
+    public int getCode() {
+        return code;
+    }
+}
+
+// 使用
+throw new BusinessException(404, "资源未找到");
+```
+
+### 多异常捕获 (JDK 7+)
+
+```java
+// 多异常捕获 - 语法
+try {
+    // 代码
+} catch (IOException | SQLException e) {
+    // 处理多个异常
+    System.err.println("错误: " + e.getMessage());
+}
+
+// 注意: 异常类型不能有继承关系
+// 错误: catch (IOException | FileNotFoundException e) {}
+// 正确: catch (IOException e) {} (FileNotFoundException 是 IOException 的子类)
+
+// 类型判断
+try {
+    // 代码
+} catch (IOException | SQLException e) {
+    if (e instanceof IOException) {
+        // 处理 IO 异常
+    } else {
+        // 处理 SQL 异常
+    }
+}
+```
+
+### 精确异常重抛 (JDK 7+)
+
+```java
+// final 重抛 - 类型推断
+public void process() throws IOException, SQLException {
+    try {
+        // 可能抛出 IOException 或 SQLException
+    } catch (final Exception e) {
+        // e 被声明为 final
+        throw e;  // 编译器知道实际抛出的类型
+    }
+}
+
+// JDK 7 之前需要多次捕获
+public void process() throws IOException, SQLException {
+    try {
+        // ...
+    } catch (IOException e) {
+        throw e;
+    } catch (SQLException e) {
+        throw e;
+    }
+}
+```
+
+---
+
+## try-with-resources
+
+**JDK 7+**
+
+### 基础使用
+
+```java
+// AutoCloseable - 自动关闭接口
+public class Resource implements AutoCloseable {
+    public void doSomething() {
+        System.out.println("Doing something");
+    }
+
+    @Override
+    public void close() {
+        System.out.println("Resource closed");
+    }
+}
+
+// 使用 try-with-resources
+try (Resource resource = new Resource()) {
+    resource.doSomething();
+}  // 自动调用 close()
+
+// 多个资源
+try (FileReader fr = new FileReader("input.txt");
+     BufferedReader br = new BufferedReader(fr)) {
+    String line = br.readLine();
+    System.out.println(line);
+}  // 按相反顺序关闭: br, fr
+
+// JDK 9+ - 简化语法
+Resource resource = new Resource();
+try (resource) {
+    resource.doSomething();
+}  // 自动关闭
+```
+
+### 自定义 AutoCloseable
+
+```java
+// 实现自动关闭
+public class DatabaseConnection implements AutoCloseable {
+    private Connection conn;
+
+    public DatabaseConnection(String url) throws SQLException {
+        conn = DriverManager.getConnection(url);
+    }
+
+    public void execute(String sql) throws SQLException {
+        Statement stmt = conn.createStatement();
+        stmt.execute(sql);
+    }
+
+    @Override
+    public void close() {
+        if (conn != null) {
+            try {
+                conn.close();
+            } catch (SQLException e) {
+                // 记录错误
+            }
+        }
+    }
+}
+
+// 使用
+try (DatabaseConnection db = new DatabaseConnection("jdbc:mysql://localhost/mydb")) {
+    db.execute("SELECT * FROM users");
+}
+```
+
+### 抑制异常
+
+```java
+// 如果 close() 抛出异常，会被抑制
+try (Resource resource = new Resource()) {
+    // 主代码抛出异常
+    throw new RuntimeException("Main exception");
+} catch (Exception e) {
+    // e 是主异常
+    System.out.println("Main: " + e.getMessage());
+
+    // 获取被抑制的异常
+    Throwable[] suppressed = e.getSuppressed();
+    for (Throwable t : suppressed) {
+        System.out.println("Suppressed: " + t.getMessage());
+    }
+}
+```
+
+---
+
+## 异常链
+
+**JDK 1.4+**
+
+### 异常包装
+
+```java
+// 原始异常
+try {
+    // 低层代码抛出异常
+    FileReader file = new FileReader("input.txt");
+} catch (FileNotFoundException e) {
+    // 包装成更高层异常
+    throw new BusinessException(
+        404,
+        "配置文件未找到",
+        e  // 原因
+    );
+}
+
+// 使用 getCause() 获取原因
+try {
+    // ...
+} catch (BusinessException e) {
+    Throwable cause = e.getCause();
+    if (cause instanceof FileNotFoundException) {
+        System.err.println("原始错误: " + cause.getMessage());
+    }
+}
+```
+
+### initCause()
+
+```java
+// 设置原因
+Exception ex = new Exception("High level error");
+ex.initCause(new IOException("Low level error"));
+throw ex;
+
+// 获取原因
+try {
+    // ...
+} catch (Exception e) {
+    Throwable cause = e.getCause();
+    // cause = IOException
+}
+```
+
+### 完整异常链
+
+```java
+// 多层包装
+try {
+    // 最底层
+    throw new SQLException("Connection failed");
+} catch (SQLException e) {
+    // 第二层
+    throw new DAOException("Database error", e);
+} catch (DAOException e) {
+    // 第三层
+    throw new ServiceException("Service failed", e);
+}
+
+// 遍历异常链
+try {
+    // ...
+} catch (ServiceException e) {
+    Throwable cause = e;
+    int level = 0;
+    while (cause != null) {
+        System.out.println("Level " + level + ": " + cause.getClass().getName());
+        System.out.println("  Message: " + cause.getMessage());
+        cause = cause.getCause();
+        level++;
+    }
+}
+```
+
+---
+
+## StackWalker
+
+**JDK 9+ (JEP 259)**
+
+### 基础使用
+
+```java
+import java.lang.StackWalker.StackFrame;
+
+// 获取当前栈
+StackWalker walker = StackWalker.getInstance();
+
+// 遍历栈帧
+walker.forEach(frame -> {
+    System.out.println(
+        frame.getClassName() + "." +
+        frame.getMethodName() +
+        ":" + frame.getLineNumber()
+    );
+});
+
+// 获取栈帧列表
+List<StackFrame> frames = walker.walk(s ->
+    s.limit(10).collect(Collectors.toList())
+);
+
+// 获取调用者类
+Class<?> caller = walker.getCallerClass();
+```
+
+### 高级用法
+
+```java
+// 配置 StackWalker
+StackWalker walker = StackWalker.getInstance(
+    Set.of(
+        StackWalker.Option.RETAIN_CLASS_REFERENCE,  // 保留类引用
+        StackWalker.Option.SHOW_HIDDEN_FRAMES,      // 显示隐藏帧
+        StackWalker.Option.SHOW_REFLECT_FRAMES     // 显示反射帧
+    )
+);
+
+// 获取完整栈
+List<StackFrame> frames = walker.walk(s ->
+    s.collect(Collectors.toList())
+);
+
+// 查找特定帧
+Optional<StackFrame> frame = walker.walk(s ->
+    s.filter(f -> f.getMethodName().equals("myMethod"))
+     .findFirst()
+);
+```
+
+### 性能比较
+
+```java
+// 旧方式 - Thread.currentThread().getStackTrace()
+// 性能差，会捕获整个栈
+StackTraceElement[] stack = Thread.currentThread().getStackTrace();
+
+// 新方式 - StackWalker
+// 惰性求值，性能好
+StackWalker walker = StackWalker.getInstance();
+List<StackFrame> frames = walker.walk(s ->
+    s.limit(5).collect(Collectors.toList())
+);
+```
+
+---
+
+## 模式匹配异常
+
+**JDK 20+ 预览**
+
+### instanceof 模式
+
+```java
+// JDK 20+ 预览功能
+// --enable-preview
+
+try {
+    // ...
+} catch (IOException e) {
+    System.err.println("IO: " + e.getMessage());
+} catch (SQLException e) {
+    System.err.println("SQL: " + e.getMessage());
+} catch (Exception e) {
+    // 使用模式匹配
+    if (e instanceof BusinessException(int code, String message)) {
+        System.err.println("Business[" + code + "]: " + message);
+    } else {
+        System.err.println("Unknown: " + e.getMessage());
+    }
+}
+```
+
+### when 守卫 (JDK 21+)
+
+```java
+// when 守卫
+try {
+    // ...
+} catch (Exception e)
+    when (e instanceof BusinessException && ((BusinessException) e).isRecoverable()) {
+    // 只处理可恢复的业务异常
+    System.err.println("Recoverable: " + e.getMessage());
+}
+```
+
+---
+
+## 最佳实践
+
+### 异常设计原则
+
+```java
+// 1. 选择合适的异常类型
+// - Error: 系统级错误，不应捕获
+// - RuntimeException: 编程错误，可以不声明
+// - Checked Exception: 可恢复错误，必须声明
+
+// 2. 提供有用的错误信息
+throw new IllegalArgumentException(
+    "pageSize 不能小于 1, 实际: " + pageSize
+);
+
+// 3. 包含原因
+throw new ServiceException(
+    "保存用户失败",
+    new SQLException("Duplicate key", sqlEx)
+);
+
+// 4. 保持异常不可变
+public final class MyException extends RuntimeException {
+    // final 字段
+}
+
+// 5. 提供恢复信息
+public class RetryableException extends RuntimeException {
+    private final boolean retryable;
+
+    public boolean isRetryable() {
+        return retryable;
+    }
+}
+```
+
+### 异常处理模式
+
+```java
+// 1. 转换异常
+try {
+    // 低层操作
+} catch (LowLevelException e) {
+    throw new HighLevelException("业务操作失败", e);
+}
+
+// 2. 链式处理
+try {
+    // 操作
+} catch (RecoverableException e) {
+    // 尝试恢复
+    recover();
+} catch (Exception e) {
+    // 记录并包装
+    log.error("操作失败", e);
+    throw new ServiceException("服务不可用", e);
+}
+
+// 3. 空捕获 (谨慎使用)
+try {
+    // 不重要的操作
+} catch (Exception e) {
+    // 记录但不抛出
+    log.debug("操作失败", e);
+}
+
+// 4. 后备操作
+try {
+    primaryOperation();
+} catch (Exception e) {
+    fallbackOperation();
+}
+```
+
+### 性能考虑
+
+```java
+// 1. 避免在循环中创建异常
+// 差
+for (int i = 0; i < 1000; i++) {
+    try {
+        // ...
+    } catch (Exception e) {
+        // 每次都创建异常对象
+    }
+}
+
+// 好
+try {
+    for (int i = 0; i < 1000; i++) {
+        // ...
+    }
+} catch (Exception e) {
+    // 只创建一次
+}
+
+// 2. 避免不必要的异常捕获
+// 差
+try {
+    if (obj == null) {
+        throw new IllegalArgumentException();
+    }
+} catch (IllegalArgumentException e) {
+    // ...
+}
+
+// 好
+if (obj == null) {
+    // 直接处理
+}
+
+// 3. 使用 StackWalker 而非 getStackTrace()
+List<StackFrame> frames = StackWalker.getInstance().walk(
+    s -> s.limit(10).collect(Collectors.toList())
+);
+```
 
 ---
 
@@ -37,15 +631,63 @@ JDK 1.0 ── JDK 1.4 ── JDK 7 ── JDK 9 ── JDK 21
 
 | 排名 | 贡献者 | 提交数 | 组织 | 主要贡献 |
 |------|--------|--------|------|----------|
-| 1 | Joe Darcy | 7 | Oracle | 异常体系 |
+| 1 | Joe Darcy | 7 | Oracle | 异常体系设计 |
 | 2 | Pavel Rappo | 4 | Oracle | API 设计 |
-| 3 | Erik Gahlin | 3 | Oracle | JFR |
+| 3 | Erik Gahlin | 3 | Oracle | JFR 异常事件 |
 | 4 | Roger Riggs | 1 | Oracle | 核心库 |
 | 5 | Mikael Vidstedt | 1 | Oracle | 运行时 |
+
+### 历史贡献者
+
+| 贡献者 | 公司/机构 | 主要贡献 |
+|--------|----------|----------|
+| **Joshua Bloch** | Sun/Google | 异常设计原则 |
+| **Neal Gafter** | Sun | 异常链实现 |
+| **Mandy Chung** | Oracle | StackWalker API |
+
+---
+
+## Git 提交历史
+
+> 基于 OpenJDK master 分支分析
+
+### 异常处理改进 (2024-2026)
+
+```bash
+# 查看异常相关提交
+cd /path/to/jdk
+git log --oneline -- src/java.base/share/classes/java/lang/Throwable.java
+git log --oneline -- src/java.base/share/classes/java/lang/Exception.java
+```
 
 ---
 
 ## 相关链接
 
-- [异常时间线](timeline.md)
+### 内部文档
+
+- [异常时间线](timeline.md) - 详细的历史演进
 - [核心 API](../)
+
+### 外部资源
+
+- [JEP 259: StackWalker](https://openjdk.org/jeps/259)
+- [JEP 394: Pattern Matching for instanceof](https://openjdk.org/jeps/394)
+- [JEP 406: Pattern Matching for switch](https://openjdk.org/jeps/406)
+- [Java 异常处理指南 (Oracle)](https://docs.oracle.com/javase/tutorial/essential/exceptions/)
+- [Effective Java - 异常章节](https://www.oreilly.com/library/view/effective-java/9780134686097/)
+
+### 最佳实践
+
+- [异常处理最佳实践 (Oracle)](https://docs.oracle.com/javase/tutorial/essential/exceptions/)
+- [Java 异常设计模式](https://www.oracle.com/java/technologies/javase/codeconventions-exceptions.html)
+
+---
+
+**最后更新**: 2026-03-20
+
+**Sources**:
+- [JEP 259: StackWalker](https://openjdk.org/jeps/259)
+- [JEP 394: Pattern Matching for instanceof](https://openjdk.org/jeps/394)
+- [Java Exceptions Tutorial (Oracle)](https://docs.oracle.com/javase/tutorial/essential/exceptions/)
+- [Effective Java: Exceptions](https://www.oreilly.com/library/view/effective-java/9780134686097/)
